--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -10,12 +10,9 @@ title: IODC18
 
   <div class="section long-text long-text--negative timeline">
     <h2>Timeline</h2>
-    <p>Launch call for proposals <br>
-    <strong>February 1, 2018</strong></p>
-    <p>Closing of submission period <br>
-    <strong>April 1, 2018</strong></p>
-    <p>Publication of conference programme<br>
-    <strong>June 1, 2018</strong></p>
+    <p>Launch call for proposals | <strong>February 1, 2018</strong></p>
+    <p>Closing of submission period | <strong>April 1, 2018</strong></p>
+    <p>Publication of conference programme | <strong>June 1, 2018</strong></p>
   </div>
 
   <div class="section">
@@ -29,7 +26,7 @@ title: IODC18
     <p>This year’s conference will strive to address the key issues, challenges, and problems facing the open data community by seeking to identify innovative solutions, partnership opportunities, and collaborative ventures that can translate to real progress moving forward.</p>
     <p>Under the Theme <strong class="long-text__highlight">“The Future is Open”</strong>, IODC 2018 will build on the incredibly success of past conferences to develop a more innovative conference experience. The organizers of IODC 2018 are seeking the help and support of the global open data community through this call for proposals to co-create a forward-focused programme of interactive sessions, workshops, guided discussions, and events.</p>
     <p>We are inviting proposals between now and March 1, 2018 that seek to help shape the future of open data.</p> 
-    <p class="long-text__highlight">A strong preference will be given to proposals that identify a problem then seek to solve it through highly interactive sessions that provide an opportunity for presenters and participants to work together to develop innovative solutions, new partnerships, or other follow-up actions to IODC 2018.</p>
+    <p><strong>A strong preference will be given to proposals that identify a problem then seek to solve it through highly interactive sessions that provide an opportunity for presenters and participants to work together to develop innovative solutions, new partnerships, or other follow-up actions to IODC 2018.</strong></p>
     <p>You may submit more than one proposal, but each submission must be made separately. Submissions must be received no later than <strong>April 1st, 2018</strong>.</p>
     <p>The working languages of IODC 2018 will be both <strong>English and Spanish</strong>; thus, proposals and presentations will be accepted in both languages. Should your proposal be accepted, please note that sessions must be delivered in person.</p>
     <p>All submissions received during the Call for Proposals will be reviewed by the <a href="{{ '/iodc-programme-committee.html' | relative_url }}"><strong>IODC Programme Committee</strong></a>. The Programme Committee is comprised of a wide range of open data subject matter experts representing open data organizations, academic institutions, governments, and the private sector. They have generously contributed their time to ensure the best possible programme for IODC 2018.</p>
