--- a/source/code-of-conduct.html
+++ b/source/code-of-conduct.html
@@ -40,7 +40,7 @@ title: IODC18
   </div>
 
  <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Register</a>
+    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
   </div>
 </main>
