--- a/source/committee.html
+++ b/source/committee.html
@@ -21,7 +21,7 @@ title: IODC18
   </ul>
 
   <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Register</a>
+    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
   </div>
 </main>
