--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@ title: IODC18
 <main role="main" class="wrapper"> <!-- main content starts here -->
   
   <div class="callout">
-    <h1>The Future is Open</h1>
-    <h4>Buenos Aires</h4>
-    <h3>September 20-21, 2018</h3>
+    <h1><span>The Future is Open</span></h1>
+    <h4><span>Buenos Aires</span></h4>
+    <h3><span>September 20-21, 2018</span></h3>
   </div>
 
   <nav class="main-menu">
@@ -25,11 +25,5 @@ title: IODC18
     <a href="http://odconf1transfe.wpengine.com/" title="IODC15" class="past-events--iodc15" target="_blank"><img src="{{ '/images/iodc-15.png' | relative_url }}" alt=""></a>
   </div>
 
-  <div class="partners section">
-    <h2>Partners</h2>
-    <a href="#" class="partners__logo" target="_blank"><img class="partners--argentina" src="{{ '/images/argentina-government-logo.png' | relative_url }}" alt="Argentina Government"></a>
-    <a href="https://www.idrc.ca/" class="partners__logo" target="_blank"><img class="partners--idrc" src="{{ '/images/idrc-logo.png' | relative_url }}" alt="IDRC"></a>
-    <a href="http://www.worldbank.org/" class="partners__logo" target="_blank"><img class="partners--worldbank" src="{{ '/images/world-bank-logo.png' | relative_url }}" alt="World Bank"></a>
-    <a href="http://od4d.net/" class="partners__logo" target="_blank"><img class="partners--od4d" src="{{ '/images/od4d-logo-white.png' | relative_url }}" alt="OD4D"></a>
-  </div>
+  
 </main>
