--- a/source/register.html
+++ b/source/register.html
@@ -5,11 +5,11 @@ title: IODC18
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
   <div class="callout callout--small">
-    <h1>Register</h1>  
+    <h1>Pre-Register</h1>  
   </div>
 
   <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Register</a>
+    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
   </div>
 
   <div class="section long-text long-text--negative">
