--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@ title: IODC18
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout callout--small">
-    <h1>Submit Proposals</h1>  
+    <h1>Pre-Register</h1>  
   </div>
 
   <form action="" class="form">
