--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@ title: IODC18
   </div>
 
   <nav class="main-menu">
-    <a class="button" href="{{ '/register.html' | relative_url }}">Pre-Register</a>
+    <a class="button" href="{{ '/form.html' | relative_url }}">Pre-Register</a>
     <a class="button" href="{{ '/call-for-proposals.html' | relative_url }}">Call for Proposals</a>
     <a class="button" href="{{ '/about.html' | relative_url }}">About</a>
     <a class="button" href="{{ '/committee.html' | relative_url }}">Programme Committee</a>
