--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,7 @@ title: IODC18
   
   <div class="callout">
     <h1><span>The Future is Open</span></h1>
-    <h4><span>Buenos Aires</span></h4>
-    <h3><span>September 20-21, 2018</span></h3>
+    <h4><span>Buenos Aires</span> | September 20-21, 2018</h4>
   </div>
 
   <nav class="main-menu">
