--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@ title: IODC18
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
-  
+
   <div class="callout">
     <h1><span>The Future is Open</span></h1>
     <h4><span>Buenos Aires</span> | September 20-21, 2018</h4>
@@ -13,7 +13,7 @@ title: IODC18
   <nav class="main-menu">
     <a class="button" href="{{ '/form.html' | relative_url }}">Pre-Register</a>
     <a class="button" href="{{ '/call-for-proposals.html' | relative_url }}">Call for Proposals</a>
-    <a class="button" href="{{ '/about.html' | relative_url }}">About</a>
+    <a class="button" href="/about.html">About</a>
     <a class="button" href="{{ '/committee.html' | relative_url }}">Programme Committee</a>
     <a class="button" href="{{ '/code-of-conduct.html' | relative_url }}">Code of Conduct</a>
   </nav>
@@ -24,5 +24,5 @@ title: IODC18
     <a href="http://odconf1transfe.wpengine.com/" title="IODC15" class="past-events--iodc15" target="_blank"><img src="{{ '/images/iodc-15.png' | relative_url }}" alt=""></a>
   </div>
 
-  
+
 </main>
