Change committe url

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@ title: IODC18
     <a class="button" href="{{ '/form.html' | relative_url }}">Pre-Register</a>
     <a class="button" href="{{ '/call-for-proposals.html' | relative_url }}">Call for Proposals</a>
     <a class="button" href="/about.html">About</a>
-    <a class="button" href="{{ '/committee.html' | relative_url }}">Programme Committee</a>
+    <a class="button" href="/committee.html">Programme Committee</a>
     <a class="button" href="{{ '/code-of-conduct.html' | relative_url }}">Code of Conduct</a>
   </nav>
 
