Change call for proposals url

--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,7 @@ title: IODC18
 
   <nav class="main-menu">
     <a class="button" href="{{ '/form.html' | relative_url }}">Pre-Register</a>
-    <a class="button" href="{{ '/call-for-proposals.html' | relative_url }}">Call for Proposals</a>
+    <a class="button" href="/call-for-proposals.html">Call for Proposals</a>
     <a class="button" href="/about.html">About</a>
     <a class="button" href="/committee.html">Programme Committee</a>
     <a class="button" href="/code-of-conduct.html">Code of Conduct</a>
