Change hardcoded language to a paramter

--- a/source/about.html
+++ b/source/about.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 title: IODC18
+lang: en
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout callout--small">
-    <h1>About IODC</h1>  
+    <h1>About IODC</h1>
   </div>
 
   <div class="section long-text long-text--negative">
