--- a/source/committee.html
+++ b/source/committee.html
@@ -1,23 +1,24 @@
 ---
 layout: default
 title: IODC18
+lang: en
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout callout--small">
-    <h1>Programme Committee</h1>  
+    <h1>Programme Committee</h1>
   </div>
-  
+
   <ul class="section people-list">
-    
+
       {% for i in site.data.committee %}
       <li>
         <p class="people-list__name">{{i.name}}</p>
         <p class="people-list__org">{{i.org}}</p>
       </li>
-      {% endfor %}    
-    
+      {% endfor %}
+
   </ul>
 
   <div class="section">
