--- a/source/register.html
+++ b/source/register.html
@@ -1,11 +1,12 @@
 ---
 layout: default
 title: IODC18
+lang: en
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
   <div class="callout callout--small">
-    <h1>Pre-Register</h1>  
+    <h1>Pre-Register</h1>
   </div>
 
   <div class="section">
