--- a/source/form.html
+++ b/source/form.html
@@ -1,12 +1,13 @@
 ---
 layout: default
 title: IODC18
+lang: en
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
 
   <div class="callout callout--small">
-    <h1>Pre-Register</h1>  
+    <h1>Pre-Register</h1>
   </div>
 
   <form action="" class="form">
@@ -20,7 +21,7 @@ title: IODC18
         Email
         <input type="email" name="email">
       </label>
-    
+
       <label for="name">
         Proposal Title
         <input type="text" name="name">
@@ -30,7 +31,7 @@ title: IODC18
         Description
         <textarea name="" id="" name="description"></textarea>
       </label>
-    
+
 
     <div class="section">
       <a class="button" href="{{ 'form.html' | relative_url }}">Submit</a>
