--- a/source/committee_es.html
+++ b/source/committee_es.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: IODC18
-lang: en
+lang: es
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
