Update pre registation URL

--- a/source/committee.html
+++ b/source/committee.html
@@ -22,7 +22,7 @@ lang: en
   </ul>
 
   <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
+    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
   </div>
 </main>
