--- a/source/about.html
+++ b/source/about.html
@@ -36,7 +36,7 @@ lang: en
   </div>
 
   <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
+    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
   </div>
 </main>
