--- a/source/about_es.html
+++ b/source/about_es.html
@@ -35,7 +35,7 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">Pre-Register</a>
+    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
   </div>
 </main>
