--- a/source/code-of-conduct_es.html
+++ b/source/code-of-conduct_es.html
@@ -38,7 +38,7 @@ lang: es
   </div>
 
  <div class="section">
-    <a class="button" href="{{ 'form.html' | relative_url }}">PRE REGISTRO</a>
+    <a class="button" href="/conferences/pre-registration/register/new">PRE REGISTRO</a>
     <a class="button" href="{{ 'form.html' | relative_url }}">LLAMADO A PROPUESTAS</a>
   </div>
 </main>
