--- a/source/index_es.html
+++ b/source/index_es.html
@@ -12,7 +12,7 @@ lang: es
   </div>
 
   <nav class="main-menu">
-    <a class="button" href="{{ '/form.html' | relative_url }}">PRE REGISTRO</a>
+    <a class="button" href="/conferences/pre-registration/register/new">PRE REGISTRO</a>
     <a class="button" href="/call-for-proposals.html">LLAMADO A PROPUESTAS</a>
     <a class="button" href="/about.html">ACERCA DE IODC 2018</a>
     <a class="button" href="/committee.html">COMITÉ ACADÉMICO</a>
