Update submit proposal URL

--- a/source/call-for-proposals_es.html
+++ b/source/call-for-proposals_es.html
@@ -17,7 +17,7 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="{{ '/form.html' | relative_url }}">ENVIAR PROPUESTA</a>
+    <a class="button" href="/conferences/iodc18/program/proposals/new">ENVIAR PROPUESTA</a>
   </div>
 
   <div class="section long-text long-text--negative">
