--- a/source/code-of-conduct_es.html
+++ b/source/code-of-conduct_es.html
@@ -39,7 +39,7 @@ lang: es
 
  <div class="section">
     <a class="button" href="/conferences/pre-registration/register/new">PRE REGISTRO</a>
-    <a class="button" href="{{ 'form.html' | relative_url }}">LLAMADO A PROPUESTAS</a>
+    <a class="button" href="/conferences/iodc18/program/proposals/new">LLAMADO A PROPUESTAS</a>
   </div>
 </main>
 
