--- a/source/about_es.html
+++ b/source/about_es.html
@@ -36,7 +36,7 @@ lang: es
 
   <div class="section">
     <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
-    <a class="button" href="{{ 'form.html' | relative_url }}">Submit Proposal</a>
+    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
   </div>
 </main>
 
