--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -17,7 +17,7 @@ lang: en
   </div>
 
   <div class="section">
-    <a class="button" href="{{ '/form.html' | relative_url }}">Submit Proposal</a>
+    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
   </div>
 
   <div class="section long-text long-text--negative">
