--- a/source/about.html
+++ b/source/about.html
@@ -17,7 +17,7 @@ lang: en
     <ul class="main-objectives">
       <li><div>1</div>Identify and explore the new opportunities and challenges that are shaping the open data agenda;</li>
       <li><div>2</div>Highlight innovative and practical open data solutions capable of driving social and economic impact in areas such as health, education, science, etc.;</li>
-      <li><div>3</div>Consolidate an international partnership to drive the development of global common resources for the international Open Data community.</li>
+      <li><div>3</div>Consolidate an international partnership to drive the development of global common resources for the international open data community.</li>
     </ul>
     <p>Under the theme “The Future is Open”, this year’s conference will reconvene our ever expanding community to address the key issues and challenges facing the open data community today, and seek to identify innovative solutions and opportunities for increased collaboration that will translate into real progress in the years ahead.</p>
     <p>The agenda will be co-created with the broad participation of the open data community through a global call for proposals, resulting in a forward-focused programme of interactive sessions, workshops, guided discussions, and special events. IODC organizers are committed to creating an inclusive, innovative, and empowering event and will strive for the greatest possible level of gender balance, regional diversity, and inclusion of all voices.</p>
