Update call for proposals text

--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -10,7 +10,7 @@ lang: en
   </div>
 
   <div class="section long-text long-text--negative timeline">
-    <h2>Timeline</h2>
+    <h2 id="timeline">Timeline</h2>
     <p>Launch call for proposals | <strong>February 1, 2018</strong></p>
     <p>Closing of submission period | <strong>April 1, 2018</strong></p>
     <p>Publication of conference programme | <strong>June 1, 2018</strong></p>
@@ -20,18 +20,74 @@ lang: en
     <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
   </div>
 
-  <div class="section long-text long-text--negative">
-    <p>The global open data community is invited to submit proposals for sessions to be included in the agenda for the 2018 International Open Data Conference to be held in Buenos Aires, Argentina on September 27-28, 2018.</p>
-    <p>This year marks 10 years since the idea of open data first started to gain global traction, but today, a decade later, openness has never been more important, nor it has been more under threat.</p>
-    <p>From social media to artificial intelligence and a range of privacy issues, we live in a world where data increasingly both drives the economy, and simultaneously, creates disruption across every sector of society.</p>
-    <p>This year’s conference will strive to address the key issues, challenges, and problems facing the open data community by seeking to identify innovative solutions, partnership opportunities, and collaborative ventures that can translate to real progress moving forward.</p>
-    <p>Under the Theme <strong class="long-text__highlight">“The Future is Open”</strong>, IODC 2018 will build on the incredibly success of past conferences to develop a more innovative conference experience. The organizers of IODC 2018 are seeking the help and support of the global open data community through this call for proposals to co-create a forward-focused programme of interactive sessions, workshops, guided discussions, and events.</p>
-    <p>We are inviting proposals between now and March 1, 2018 that seek to help shape the future of open data.</p>
-    <p><strong>A strong preference will be given to proposals that identify a problem then seek to solve it through highly interactive sessions that provide an opportunity for presenters and participants to work together to develop innovative solutions, new partnerships, or other follow-up actions to IODC 2018.</strong></p>
-    <p>You may submit more than one proposal, but each submission must be made separately. Submissions must be received no later than <strong>April 1st, 2018</strong>.</p>
+  <div class="section cfp long-text long-text--negative">
+    <h1 style="text-align:center;">IODC 2018 - The Future is Open</h1>
+
+    <p>The global open data community is invited to submit proposals for sessions to be included in the agenda for the 2018 International Open Data Conference to be held in <strong>Buenos Aires, Argentina on September 27-28, 2018.</strong></p>
+    <p>This year marks 10 years since the idea of open data first started to gain global traction, but a decade later, openness has never been more important, nor it has been more under threat. From social media to artificial intelligence and a range of privacy issues, we live in a world where data increasingly both drives the economy, and simultaneously creates disruption across every sector of society.</p>
+    <p>This year’s conference will strive to explore the key issues, challenges, and problems facing the open data community, and seek to identify innovative solutions, partnership opportunities, and collaborative ventures that can translate into real progress.</p>
+    <p>Under the Theme “<strong>The Future is Open</strong>”, IODC 2018 will once again bring together the global open data community in an innovative conference that will help shape our increasingly data driven world. The organizers of IODC 2018 are seeking the help and support of the global open data community to co-create a forward-focused programme of interactive sessions, workshops, guided discussions, and events.</p>
+
+    <p><strong>We are inviting proposals between now and April 1, 2018 that seek to help shape the future of open data. Submissions should target one of three conference tracks:</strong></p>
+    <ul>
+        <li>
+            <strong>The Big Picture</strong> - Panels and debates (45 minutes - 1 hour) that allow for the exploration of emerging trends and issues, ongoing challenges, and cross-cutting themes facing the broader open data community. This can include gender, privacy, inclusion, algorithms, big data, artificial intelligence, and other emerging issues.
+        </li>
+        <li>
+            <strong>Action Track</strong> - Sessions and workshops  (45 minutes - 1 hour) that allow for the exchange of information, interactive discussions, brainstorming sessions, case studies, roundtables, etc. Sessions should contribute to areas of <a href="#">international collaboration</a> identified in previous conferences, and provide an opportunity for participants to explore innovative solutions, new partnerships, or potential follow-up actions to IODC 2018:
+            <ul>
+                <li>Principles & Policies - Broadening political commitment to open data principles and policies</li>
+                <li>Open Standards - Identifying and adopting user-centric open standards</li>
+                <li>Capacity Building - Data Literacy, Skills Development, IT and Data Infrastructure</li>
+                <li>Innovation Networks - Strengthening networks to address shared and common challenges</li>
+                <li>Measurement and Evaluation - Ensuring action on open data is more evidence-based</li>
+                <li>Regional Dialogues - Connecting global and regional communities: Africa, Asia, Eastern and Western Europe, Latin America and the Caribbean, Middle East and Northern Africa, North America, Oceania.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Impact Track</strong> - Short, dynamic “Ignite “ sessions (10 - 15 minutes max) showcasing concrete examples of open data in action within core open data thematic sectors:
+            <ul>
+                <li>Accountability and Anti-Corruption (parliamentary, elections, party financing)</li>
+                <li>Agriculture</li>
+                <li>Corporate (beneficial ownership, incorporation data)</li>
+                <li>Crime and Justice</li>
+                <li>Education</li>
+                <li>Elections</li>
+                <li>Environment (incl: climate, air and water quality, weather)</li>
+                <li>Extractives</li>
+                <li>Geospatial (mapping and earth observation)</li>
+                <li>Government Finances (budget, expenditures, taxation)</li>
+                <li>Health</li>
+                <li>International Aid and Humanitarian Relief</li>
+                <li>Land Ownership</li>
+                <li>National Statistics</li>
+                <li>Science/Research</li>
+                <li>Transport</li>
+                <li>Urban Development (open cities, resilience, urban planning).</li>
+            </ul>
+        </li>
+    </ul>
+
+    <p>A strong preference will be given to proposals that identify a particular problem or challenge then seek to explore or solve it through interactive sessions, or that provide an opportunity for presenters and participants to explore issues and innovative approaches together.</p>
+    <p>In addition, IODC 2018 will spotlight gender issues as they relate to open data - both in terms of gender equity with regard to participation, practices, and processes toward attaining gender equality as an end goal, as well as the accessibility and use of gender related data. <strong>We will give special attention to those submissions that explore gender related issues, as well as to those which reflect gender considerations and balanced participation.</strong></p>
+    <p>This year, the conference will also highlight the <a href="#">State of Open Data</a> initiative, providing results to date from multiple contributors, and encouraging broader feedback from participants on observations and recommendations.</p>
+    <p>You may submit more than one proposal, but each submission must be made separately. Submissions must be received no later than <strong>April 1st, 2018.</strong></p>
     <p>The working languages of IODC 2018 will be both <strong>English and Spanish</strong>; thus, proposals and presentations will be accepted in both languages. Should your proposal be accepted, please note that sessions must be delivered in person.</p>
-    <p>All submissions received during the Call for Proposals will be reviewed by the <a href="/committee.html"><strong>IODC Programme Committee</strong></a>. The Programme Committee is comprised of a wide range of open data subject matter experts representing open data organizations, academic institutions, governments, and the private sector. They have generously contributed their time to ensure the best possible programme for IODC 2018.</p>
-    <p>Please note that everyone (attendees and session participants) in IODC 2018 must adhere to the terms and conditions of the <a href="/code-of-conduct.html"><strong>IODC Code of Conduct</strong></a>.</p>
+    <p>All submissions received during the Call for Proposals will be reviewed by the <a href="/committee.html">IODC Programme Committee</a> comprised of a wide range of open data subject matter experts representing open data organizations, academic institutions, governments, and the private sector.</p>
+    <p>Please note that everyone (attendees and session participants) in IODC 2018 must adhere to the terms and conditions of the <a href="/code-of-conduct.html">IODC Code of Conduct</a>.</p>
+
+    <h3><u>Suggestions for Successful Sessions</u></h3>
+
+    <p>The following tips are intended to help you think about how to make your session more engaging, participatory and insightful.</p>
+    <p><strong>Get creative.</strong> Design your session so that it meets your objectives in a way that is conducive to learning, and meaningful to your audience.  Think creatively about how best to facilitate a session and what techniques to use to make it as engaging and participatory as possible.</p>
+    <p><strong>Collaborate with others to organize a session.</strong> If you know other organizations working on similar  issues, you might want to consider collaborating on a joint session.</p>
+    <p><strong>A representative session.</strong> Is your session inclusive and diverse? Does it consider gender, regional and sectoral balance?</p>
+    <p><strong>Engage participants before the summit.</strong> Ask participants who register early for your session if they would like to contribute to the design or have ideas regarding content. This can help ensure your session is a success.</p>
+    <p><strong>Engage participants after your session.</strong> Plan to provide concrete follow-up actions after your session.  For example by sharing useful resources, offering ways to take action, and suggesting forums in which to continue the discussion.</p>
+    <p><strong>Brief the speakers ahead of time.</strong> The session moderator or facilitator should give speakers/presenters sufficient guidelines about the session and its format.</p>
+    <p><strong>Allow sufficient time for questions, answers and genuine discussion.</strong> A good portion of the time should be allocated for participants to share their ideas and ask questions.</p>
+    <p><strong>Remember to document your session.</strong> Whether it’s through traditional note taking or more dynamic social reporting, at least one person should be designated to report on discussions via social media. This is a great way to engage a broader audience  (including participants attending other sessions, audiences tuning in via livestream and others) and to provide follow-up and continued discussion after the session.</p>
+    <p><strong>Conduct a review of your session.</strong> It is advisable to set aside time to discuss the session among organizers and facilitators: Did it meet the planned objectives?  What worked well?  What could be improved next time you plan, design, and run a session.</p>
   </div>
 
 </main>
