Update spanish call for proposals

--- a/source/call-for-proposals_es.html
+++ b/source/call-for-proposals_es.html
@@ -20,11 +20,74 @@ lang: es
     <a class="button" href="/conferences/iodc18/program/proposals/new">ENVIAR PROPUESTA</a>
   </div>
 
-  <div class="section long-text long-text--negative">
-    <p>Desde hace 10 años, los datos abiertos son una prioridad en el mundo. Hoy en día atraviesan cada sector de la sociedad, generan disrupción e invitan a cuestionar el entorno que nos rodea. ¡Ahora toca pensar juntos en el futuro de la información/información abierta/apertura! Hasta el 1 de abril de 2018, invitamos a la comunidad a enviar propuestas para incorporar a la agenda de IODC 2018.</p>
-    <p>La conferencia de este año tomará experiencias de ediciones anteriores para diseñar, a través de paneles, talleres, discusiones y demás eventos paralelos, soluciones a diferentes problemáticas cotidianas. Las propuestas deberán contemplar tanto un problema como su posible solución interactiva, que permita que toda la comunidad trabaje de forma conjunta en su desarrollo/implementación.</p>
-    <p>Todos los interesados pueden enviar más de una propuesta, completando un formulario para cada una; y pueden postularse tanto en inglés como en español. El Comité Académico -compuesto por una amplia gama de expertos que representan organizaciones de datos abiertos, instituciones académicas, gobiernos y sector privado- revisará las iniciativas que luego, en el transcurso del evento, cada persona deberá presentar ante toda la comunidad.</p>
-    <p>Todos la comunidad asistente a IODC 2018 deberá cumplir con los términos y condiciones del <a href="/code-of-conduct.html"><strong>Código de Conducta</strong></a>.</p>
+  <div class="section cfp long-text long-text--negative">
+    <h1 style="text-align:center;">IODC 2018 - El Futuro es Abierto</h1>
+
+    <p>Es un placer invitar a la comunidad global de datos abiertos a enviar sus propuestas para las sesiones que se incluirán como parte de la agenda de la Conferencia Internacional de Datos Abiertos 2018, a celebrarse en <strong>Buenos Aires, Argentina, del 27 al 28 de septiembre de 2018.</strong></p>
+    <p>Este año se cumplen 10 años desde que la apertura de datos comenzó a generar tracción global. Una  década más tarde, la apertura nunca ha sido tan importante ni ha estado tan amenazada como hoy: desde las redes sociales a las preocupaciones por la privacidad, pasando por la irrupción de la inteligencia artificial, vivimos en un mundo en el que los datos impulsan la economía, al mismo tiempo que disrumpen todos los ámbitos de la vida social.</p>
+    <p>Este año, la conferencia se esforzará no solo en explorar los desafíos y problemas que enfrenta la comunidad global de datos abiertos, sino también en escanear el horizonte en búsqueda de soluciones innovadoras, oportunidades de asociación y emprendimientos colaborativos que puedan traducirse en un progreso real.</p>
+    <p>Bajo el lema "<strong>El Futuro es Abierto</strong>", IODC 2018 reunirá una vez más a toda la comunidad global de datos abiertos en un formato innovador que ayudará a comprender y moldear un mundo cada vez más impulsado por los datos. Para ello, los organizadores de IODC 2018 estamos buscando la ayuda y el apoyo de toda la comunidad global para co-crear un programa enfocado en el futuro, a través de sesiones interactivas, talleres, eventos y discusiones guiadas.</p>
+
+    <p><strong>Invitamos a todos a enviar, hasta el 1 de abril de 2018, aquellas propuestas que ayuden a comprender y dar forma al futuro de los datos. Las presentaciones deben estar orientadas a uno de los tres siguientes ejes:</strong></p>
+    <ul>
+        <li>
+            <strong>The Big Picture</strong> - Paneles y debates (45 minutos - 1 hora) que permitirán la exploración de los las tendencias emergentes, los desafíos actuales y los temas que afectan transversalmente a la comunidad más amplia de datos abiertos. Esto puede incluir aspectos como género, privacidad, inclusión, algoritmos, big data, inteligencia artificial y otros discusiones emergentes.
+        </li>
+        <li>
+            <strong>Action Track</strong> - Sesiones y talleres (45 minutos - 1 hora) que permitan el intercambio de información, debates interactivos, brainstorms, mesas redondas, y casos de estudio, entre otros. Las sesiones deben contribuir a las áreas de colaboración internacional identificadas en conferencias anteriores, y proporcionar una oportunidad para que los participantes exploren soluciones innovadoras, nuevas asociaciones y/o posibles acciones de seguimiento para IODC 2018:
+            <ul>
+                <li>Principios y Políticas - Expansión de los compromisos políticos con los principios de apertura de datos</li>
+                <li>Estándares Abiertos - Identificación y adopción de estándares abiertos centrados en el usuario</li>
+                <li>Desarrollo de Capacidades - Alfabetización de datos, desarrollo de habilidades, infraestructuras de datos</li>
+                <li>Redes de Innovación - Fortalecimiento de las redes para abordar desafíos compartidos</li>
+                <li>Medición y Evaluación - Asegurar que las políticas de apertura y a medición de su progreso estén basadas en la evidencia</li>
+                <li>Diálogos Regionales - Conectando comunidades globales y regionales: África, Asia, Europa Oriental y Occidental, América Latina y el Caribe, Medio Oriente y África del Norte, América del Norte, Oceanía.</li>
+            </ul>
+        </li>
+        <li>
+            <strong>Impact Track</strong> - Sesiones cortas y dinámicas (10 a 15 minutos como máximo) orientados a presentar ejemplos concretos de la apertura de datos “en acción”, siguiendo los bloques temáticos centrales:
+            <ul>
+                <li>Anticorrupción y accountability</li>
+                <li>Agricultura</li>
+                <li>Ayuda internacional y ayuda humanitaria</li>
+                <li>Ciencia e investigación</li>
+                <li>Corporaciones</li>
+                <li>Crimen y justicia</li>
+                <li>Desarrollo urbano y gobiernos locales</li>
+                <li>Educación</li>
+                <li>Elecciones</li>
+                <li>Estadísticas nacionales</li>
+                <li>Finanzas del gobierno</li>
+                <li>Industrias extractivas</li>
+                <li>Información geoespacial</li>
+                <li>Medio ambiente </li>
+                <li>Propiedad de la tierra</li>
+                <li>Salud</li>
+                <li>Transporte</li>
+            </ul>
+        </li>
+    </ul>
+
+    <p>Se tendrá una fuerte preferencia por aquellas propuestas que identifiquen claramente un problema o desafío en particular, y que busquen abordarlo a través de sesiones que proporcionen una oportunidad para que tanto presentadores como participantes exploren juntos los enfoques y aproximaciones innovadoras.</p>
+    <p>Además, IODC 2018 destacará las cuestiones de género relacionadas con la apertura de datos, tanto en términos de equidad de género con respecto a la participación, las prácticas y los procesos para alcanzar la igualdad de género como objetivo final, así como en lo relativo al acceso y uso de datos relativos a cuestiones de género. <strong>Para ello se prestará atención especial a aquellas presentaciones que exploren cuestiones relacionadas con el género, así como a aquellas que reflejan consideraciones de género y una participación equilibrada.</strong></p>
+    <p>Este año, la Conferencia también dará especial importancia a la iniciativa <a href="#">State of Open Data</a>, proporcionando los resultados obtenidos a partir de un gran número de contribuciones, y fomentando el feedback de los participantes respecto a sus observaciones y recomendaciones.</p>
+    <p>Todos los participantes están invitados a enviar más de una propuesta, pero cada presentación debe hacerse por separado. Las propuestas serán recibidas hasta el <strong>1 de Abril de 2018.</strong></p>
+    <p>Los idiomas de trabajo de IODC 2018 serán tanto el <strong>Inglés como el Español</strong>, y por lo tanto, las propuestas y presentaciones serán aceptadas en ambos idiomas. Si la propuesta es aceptada, es necesario tener en cuenta que las sesiones son presenciales.</p>
+    <p>Todas las presentaciones recibidas durante la Convocatoria de Propuestas serán revisadas por el <a href="/committee.html">Comité de Programa</a>, compuesto por una amplia variedad de expertos que representan o forman parte de organizaciones de la sociedad civil, instituciones académicas, gobiernos y sector privado vinculados a los datos abiertos.</p>
+    <p>Tenga en cuenta que todos los asistentes y participantes de las sesiones de IODC 2018 deben cumplir con los términos y condiciones del <a href="/code-of-conduct.html"></a>Código de Conducta de IODC</a>.</p>
+
+    <h3><u>Sugerencias para Sesiones Exitosas</u></h3>
+
+    <p>Los siguientes consejos pretenden ayudarte a pensar sobre cómo hacer que tu sesión sea más atractiva, participativa y eficaz.</p>
+    <p><strong>Se creativo.</strong> Diseña tu sesión de manera que cumpla sus objetivos y, al mismo tiempo, propicie para el aprendizaje y resulte significativa para la audiencia. Pensá creativamente la mejor manera de facilitar la sesión, usando técnicas para que sea lo más atractiva y participativa posible.</p>
+    <p><strong>Colabora con otros para organizar una sesión.</strong> Si conoces otras organizaciones que trabajan en problemas similares, es posible que desees considerar la posibilidad de colaborar en una sesión conjunta.</p>
+    <p><strong>Una sesión representativa.</strong> ¿Tu sesión es inclusiva y diversa? ¿Considera el equilibrio de género, regional y sectorial?</p>
+    <p><strong>Involucrar a los participantes antes de la Conferencia.</strong> Preguntale a los participantes que se inscriben previo a su sesión si les gustaría contribuir o si tienen ideas sobre el contenido. Esto lo puede ayudar a asegurar que su sesión sea un éxito.</p>
+    <p><strong>Involucra a los participantes después de tu sesión.</strong> Planifica las acciones de seguimiento concretas una vez terminada la sesión. Por ejemplo, compartiendo recursos útiles, ofreciendo formas de tomar acción, y sugiriendo aquellos foros en donde pueden continuar con la discusión.</p>
+    <p><strong>Guiar a los oradores, con tiempo.</strong> El moderador o facilitador de la sesión debe darle a los oradores/presentadores suficientes pautas sobre la sesión y su formato, de manera que estos puedan prepararse adecuadamente.</p>
+    <p><strong>Dejar suficiente tiempo para preguntas, respuestas y el surgimiento de discusiones genuinas.</strong> Se recomienda asignar una buena parte del tiempo para que los participantes puedan compartir sus ideas, formular preguntas y debatir con los panelistas.</p>
+    <p><strong>Recuerde documentar su sesión.</strong> Ya sea a través de la tradicional toma de notas tradicional u otros mecanismos más dinámicos e innovadores, al menos una persona debe ser designada para informar sobre las discusiones a través de las redes sociales. Esta es una gran manera de atraer a un público más amplio (incluidos los participantes que asisten a otras sesiones, audiencias que se conectan a través de transmisión en vivo, etc.) y posibilitar el seguimiento y la discusión luego de la sesión.</p>
+    <p><strong>Realice una revisión de su sesión.</strong> Es aconsejable reservar un tiempo para discutir la sesión entre los organizadores y facilitadores ¿Cumplió con los objetivos planificados? ¿Qué funcionó bien? ¿Qué se podría mejorar la próxima vez?</p>
   </div>
 
 </main>
