--- a/source/call-for-proposals.html
+++ b/source/call-for-proposals.html
@@ -34,7 +34,7 @@ lang: en
             <strong>The Big Picture</strong> - Panels and debates (45 minutes - 1 hour) that allow for the exploration of emerging trends and issues, ongoing challenges, and cross-cutting themes facing the broader open data community. This can include gender, privacy, inclusion, algorithms, big data, artificial intelligence, and other emerging issues.
         </li>
         <li>
-            <strong>Action Track</strong> - Sessions and workshops  (45 minutes - 1 hour) that allow for the exchange of information, interactive discussions, brainstorming sessions, case studies, roundtables, etc. Sessions should contribute to areas of <a href="#">international collaboration</a> identified in previous conferences, and provide an opportunity for participants to explore innovative solutions, new partnerships, or potential follow-up actions to IODC 2018:
+            <strong>Action Track</strong> - Sessions and workshops  (45 minutes - 1 hour) that allow for the exchange of information, interactive discussions, brainstorming sessions, case studies, roundtables, etc. Sessions should contribute to areas of <a href="http://od4d.net/roadmap/assets/files/report-iodc-2016-web.pdf">international collaboration</a> identified in previous conferences, and provide an opportunity for participants to explore innovative solutions, new partnerships, or potential follow-up actions to IODC 2018:
             <ul>
                 <li>Principles & Policies - Broadening political commitment to open data principles and policies</li>
                 <li>Open Standards - Identifying and adopting user-centric open standards</li>
@@ -70,7 +70,7 @@ lang: en
 
     <p>A strong preference will be given to proposals that identify a particular problem or challenge then seek to explore or solve it through interactive sessions, or that provide an opportunity for presenters and participants to explore issues and innovative approaches together.</p>
     <p>In addition, IODC 2018 will spotlight gender issues as they relate to open data - both in terms of gender equity with regard to participation, practices, and processes toward attaining gender equality as an end goal, as well as the accessibility and use of gender related data. <strong>We will give special attention to those submissions that explore gender related issues, as well as to those which reflect gender considerations and balanced participation.</strong></p>
-    <p>This year, the conference will also highlight the <a href="#">State of Open Data</a> initiative, providing results to date from multiple contributors, and encouraging broader feedback from participants on observations and recommendations.</p>
+    <p>This year, the conference will also highlight the <a href="http://www.stateofopendata.od4d.net/">State of Open Data</a> initiative, providing results to date from multiple contributors, and encouraging broader feedback from participants on observations and recommendations.</p>
     <p>You may submit more than one proposal, but each submission must be made separately. Submissions must be received no later than <strong>April 1st, 2018.</strong></p>
     <p>The working languages of IODC 2018 will be both <strong>English and Spanish</strong>; thus, proposals and presentations will be accepted in both languages. Should your proposal be accepted, please note that sessions must be delivered in person.</p>
     <p>All submissions received during the Call for Proposals will be reviewed by the <a href="/committee.html">IODC Programme Committee</a> comprised of a wide range of open data subject matter experts representing open data organizations, academic institutions, governments, and the private sector.</p>
@@ -79,7 +79,7 @@ lang: en
     <h3><u>Suggestions for Successful Sessions</u></h3>
 
     <p>The following tips are intended to help you think about how to make your session more engaging, participatory and insightful.</p>
-    <p><strong>Get creative.</strong> Design your session so that it meets your objectives in a way that is conducive to learning, and meaningful to your audience.  Think creatively about how best to facilitate a session and what techniques to use to make it as engaging and participatory as possible.</p>
+    <p><strong>Get creative.</strong> Design your session so that it meets your objectives in a way that is conducive to learning, and meaningful to your audience. <a href="https://www.fabriders.net/session-design-tips/">Think creatively about how best to facilitate a session</a> and <a href="https://www.youtube.com/watch?=tUfo9NWGHNQ&feature=youtu.be">what techniques to use to make it as engaging and participatory as possible</a>.</p>
     <p><strong>Collaborate with others to organize a session.</strong> If you know other organizations working on similar  issues, you might want to consider collaborating on a joint session.</p>
     <p><strong>A representative session.</strong> Is your session inclusive and diverse? Does it consider gender, regional and sectoral balance?</p>
     <p><strong>Engage participants before the summit.</strong> Ask participants who register early for your session if they would like to contribute to the design or have ideas regarding content. This can help ensure your session is a success.</p>
