Hide home back button

--- a/source/index_es.html
+++ b/source/index_es.html
@@ -2,6 +2,7 @@
 layout: default
 title: IODC18
 lang: es
+hide_back_button: true
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
