--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: IODC18
 lang: en
-name: home
+hide_back_button: true
 ---
 
 <main role="main" class="wrapper"> <!-- main content starts here -->
