text updates from client

--- a/source/about_es.html
+++ b/source/about_es.html
@@ -35,8 +35,8 @@ lang: es
   </div>
 
   <div class="section">
-    <a class="button" href="/conferences/pre-registration/register/new">Pre-Register</a>
-    <a class="button" href="/conferences/iodc18/program/proposals/new">Submit Proposal</a>
+    <a class="button" href="/conferences/pre-registration/register/new">Pre Registro</a>
+    <a class="button" href="/conferences/iodc18/program/proposals/new">Llamado a Propuestas</a>
   </div>
 </main>
 
