--- a/source/call-for-proposals_es.html
+++ b/source/call-for-proposals_es.html
@@ -28,7 +28,7 @@ lang: es
     <p>Este año, la conferencia se esforzará no solo en explorar los desafíos y problemas que enfrenta la comunidad global de datos abiertos, sino también en escanear el horizonte en búsqueda de soluciones innovadoras, oportunidades de asociación y emprendimientos colaborativos que puedan traducirse en un progreso real.</p>
     <p>Bajo el lema "<strong>El Futuro es Abierto</strong>", IODC 2018 reunirá una vez más a toda la comunidad global de datos abiertos en un formato innovador que ayudará a comprender y moldear un mundo cada vez más impulsado por los datos. Para ello, los organizadores de IODC 2018 estamos buscando la ayuda y el apoyo de toda la comunidad global para co-crear un programa enfocado en el futuro, a través de sesiones interactivas, talleres, eventos y discusiones guiadas.</p>
 
-    <p><strong>Invitamos a todos a enviar, hasta el 1 de abril de 2018, aquellas propuestas que ayuden a comprender y dar forma al futuro de los datos. Las presentaciones deben estar orientadas a uno de los tres siguientes ejes:</strong></p>
+    <p><strong>Invitamos a todos a enviar, hasta el 1 de abril de 2018, aquellas propuestas que ayuden a comprender y dar forma al futuro de los datos abiertos. Las presentaciones deben estar orientadas a uno de los tres siguientes ejes:</strong></p>
     <ul>
         <li>
             <strong>The Big Picture</strong> - Paneles y debates (45 minutos - 1 hora) que permitirán la exploración de los las tendencias emergentes, los desafíos actuales y los temas que afectan transversalmente a la comunidad más amplia de datos abiertos. Esto puede incluir aspectos como género, privacidad, inclusión, algoritmos, big data, inteligencia artificial y otros discusiones emergentes.
